[package]
name = "example-project"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = ""
repository = "https://github.com/n0-computer/n0des"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
iroh = "0.90"
iroh-gossip = { git = "https://github.com/n0-computer/iroh-gossip", branch = "Frando/fix-sender-clone" }
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "Frando/sim" }
iroh-ping = { git = "https://github.com/Frando/iroh-ping", branch = "Frando/dont-close-endpoint" }
n0-future = "0.1.3"
tracing = "0.1.41"

# [patch."https://github.com/n0-computer/iroh-n0des"]
# iroh-n0des = { path = "../../iroh-n0des" }

# [patch."https://github.com/n0-computer/iroh-gossip"]
# iroh-gossip = { path = "../../iroh-gossip" }
