[package]
name = "example-project"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = ""
repository = "https://github.com/n0-computer/n0des"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
iroh = "0.91"
iroh-gossip = "0.91"
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "main" }
iroh-ping = { git = "https://github.com/n0-computer/iroh-ping", branch = "main" }
iroh-blobs = "0.93"
n0-future = "0.1.3"
tracing = "0.1.41"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
bytes = "1.10.1"
derive_more = { version = "2.0.1", features = ["deref"] }
