[package]
name = "example-project"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = ""
repository = "https://github.com/n0-computer/n0des"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
iroh-n0des = { git = "https://github.com/n0-computer/iroh-n0des", branch = "main", default-features = false, features = [
    "iroh_main",
] }
